# GbOxyde

./: .gitignore  Cargo.toml
src/: gameboy.rs  lib.rs  main.rs
src/bus/: interrupts.rs  joypad.rs  mod.rs  ram.rs  timer.rs  wram.rs
src/bus/cartridge/: header.rs  mod.rs
src/cpu/: dbg.rs  instructions.rs  mod.rs  registers.rs  rw.rs  trace.rs
