[package]
name = "gboxyde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
once_cell = "1.12"
winit = "0.26.1"
cpal = "0.13"
egui-winit = "0.18"

[profile.release]
lto = true
